# Chess

./: CMakeLists.txt  README.md
TestFiles/: unit_test.cpp
TestFiles/tests/: tileTests.hpp
header/: structures.hpp
header/ChessBase/: chessbase.hpp
headers/: board.hpp  chessBoard.hpp  chessboard.hpp  chesspiecemovements.hpp  enum.hpp  functions.hpp  numbersplitter.hpp  piece.hpp  piecemovement.hpp  structures.hpp  tile.hpp
headers/ChessBase/: chessbase.hpp
headers/cpStrategies/: bishop.hpp  chesspiecestrategy.hpp  king.hpp  knight.hpp  none.hpp  pawn.hpp  queen.hpp  rook.hpp
src/: chessboard.cpp  piece.cpp  tile.cpp
src/ChessBase/: chessbase.cpp
src/cpStrategies/: knight.cpp
test/: unit_tests.cpp
test/testFiles/: chessbasetests.hpp
tests/: unit_tests.cpp
tests/testFile/: capturedpiecetests.cpp  checkPositionsTest.hpp  chessboard.cpp  numbersplittertest.cpp  piecetests.hpp  tiletests.hpp
tests/testFile/moveTests/: bishopMoveTests.cpp  pawnMoveTests.cpp  rookMoveTests.cpp
